--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,69 +1,27 @@
 version: '3.8'
 
 services:
-  db:
-    image: mysql
-    container_name: db
-    env_file: .env
-    environment:
-      - MYSQL_PASSWORD=$DB_PASS
-      - MYSQL_USER=$DB_USER
-    volumes:
-      - mysql-data:/var/lib/mysql
-    ports:
-      - 5000:3306
-    restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "mysqladmin" ,"ping", "-h", "localhost"]
-      interval: 5s
-      timeout: 2s
-      retries: 10
-    networks:
-      - inventory-management-network
-  
-  mongodb:
-    image: mongo
-    container_name: mongodb
-    env_file: .env
-    environment:
-      - MONGO_INITDB_ROOT_USERNAME=MONGO_USER
-      - MONGO_INITDB_ROOT_PASSWORD=MONGO_PASSWORD
-      - MONGO_URI=CONNECTION_STRING
-    volumes:
-      - mongo-data:/var/lib/mongo
-    ports:
-      - 27017:27017
-    restart: unless-stopped
-    networks:
-      - inventory-management-network
-
-  myapp:
-    build: 
+  app:
+    build:
       context: .
       dockerfile: Dockerfile
-    image: inventory-management
+    image: inventory-management-hosted
     container_name: app
     env_file: .env
     environment:
-      - DB_USER
-      - DB_PASS
-      - DB_HOST 
-      - CONNECTION_STRING
-      - PASSWORD
-      - EMAIL
+      DB_USER: ${DB_USER}
+      DB_PASS: ${DB_PASS}
+      DB_HOST: ${DB_HOST}
+      DB_URI: ${DB_URI}
+      CONNECTION_STRING: ${CONNECTION_STRING}
+      PASSWORD: ${PASSWORD}
+      EMAIL: ${EMAIL}
     ports:
-      - 8000:8080
+      - "8000:8080"
     restart: unless-stopped
     networks:
       - inventory-management-network
-    depends_on:
-      db:
-        condition: service_healthy
 
 networks:
   inventory-management-network:
     driver: bridge
-  
-volumes:
-  mysql-data:
-  mongo-data:
