created handler for vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,16 @@
 {
     "version": 2,
     "builds": [
-        {
-            "src": "*.go",
-            "use": "@vercel/go"
-        }
+      {
+        "src": "main.go",
+        "use": "@vercel/go"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "main.go"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "main.go"
+      }
     ]
-}
+  }
+  
